--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
 info.log
+.vscode/settings.json
+__pycache__/models.cpython-38.pyc
+__pycache__/models.cpython-39.pyc
+conectors/__pycache__/binance_futures.cpython-38.pyc
+conectors/__pycache__/binance_futures.cpython-39.pyc
+conectors/__pycache__/bitmex.cpython-38.pyc
+conectors/__pycache__/bitmex.cpython-39.pyc
+interface/__pycache__/logging_component.cpython-38.pyc
+interface/__pycache__/logging_component.cpython-39.pyc
+interface/__pycache__/root_component.cpython-38.pyc
+interface/__pycache__/root_component.cpython-39.pyc
+interface/__pycache__/styling.cpython-38.pyc
+interface/__pycache__/styling.cpython-39.pyc
+__pycache__/models.cpython-39.pyc
+conectors/__pycache__/binance_futures.cpython-39.pyc
+conectors/__pycache__/bitmex.cpython-39.pyc
