Some changes in the repositorie directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
 info.log
-.vscode/settings.json
-models.cpython-38.pyc
-models.cpython-39.pyc
-binance_futures.cpython-38.pyc
-binance_futures.cpython-39.pyc
-bitmex.cpython-38.pyc
-bitmex.cpython-39.pyc
-logging_component.cpython-38.pyc
-logging_component.cpython-39.pyc
-root_component.cpython-38.pyc
-root_component.cpython-39.pyc
-styling.cpython-38.pyc
-styling.cpython-39.pyc
-models.cpython-39.pyc
 __pycache__
-binance_futures.cpython-39.pyc
+.ideal
+.vscode
+.conectors\__pycache__
+.intersectors\__pycache__
